// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DockHost, given rendered given implementations of dock tabs emerge renders 1`] = `
<body>
  <div>
    <div>
      <div
        class="flex align-center"
      >
        <div
          data-dock-tab-test="some-dock-tab-1"
        >
          <div
            data-dock-tab-title-test="some-title-1"
          >
            Some title 1
          </div>
        </div>
        <div
          data-dock-tab-test="some-dock-tab-2"
        >
          <div
            data-dock-tab-title-test="some-title-2"
          >
            Some title 2
          </div>
        </div>
      </div>
      <div>
        <div
          data-dock-tab-content-test="some-content-1"
        >
          Some content 1
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DockHost, given rendered given implementations of dock tabs emerge when the second dock tab is clicked renders 1`] = `
<body>
  <div>
    <div>
      <div
        class="flex align-center"
      >
        <div
          data-dock-tab-test="some-dock-tab-1"
        >
          <div
            data-dock-tab-title-test="some-title-1"
          >
            Some title 1
          </div>
        </div>
        <div
          data-dock-tab-test="some-dock-tab-2"
        >
          <div
            data-dock-tab-title-test="some-title-2"
          >
            Some title 2
          </div>
        </div>
      </div>
      <div>
        <div
          data-dock-tab-content-test="some-content-2"
        >
          Some content 2
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DockHost, given rendered given no implementations of dock tabs, renders 1`] = `
<body>
  <div>
    <div>
      <div
        class="flex align-center"
      />
      <div />
    </div>
  </div>
</body>
`;
